# modern_cpp

./: .gitignore  CMakeLists.txt
src/: main.cpp  move_semantics_main.cpp
